--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Republic</title>
   </head>
   <body>
     <div id="root"></div>
