Coding and style chages to the individualEstablishmentsPage. Addition og SVG files.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/a0970145ee.js" crossorigin="anonymous"></script>
     <title>Republic</title>
   </head>
   <body>
